Comment out all the testing stuff Set a Main-Class in the jar's Manifest