@@ -7,9 +7,6 @@ plugins {
 
 application {
     mainClass = 'expectusafterlun.ch.jspeak.JSpeak'
-    // Use _JAVA_OPTIONS instead
-//    applicationDefaultJvmArgs = ['-Dawt.useSystemAAFontSettings=gasp -Dswing.aatext=true --enable-preview']
-    mainClass.set("expectusafterlun.ch.jspeak.JSpeak")
 }
 
 apply plugin: 'java'
@@ -38,7 +35,7 @@ repositories {
 dependencies {
     // https://mvnrepository.com/artifact/com.miglayout/miglayout-swing
     implementation group: 'com.miglayout', name: 'miglayout-swing', version: '5.0'
-    testImplementation     'junit:junit:4.13'
+    //testImplementation     'junit:junit:4.13'
 
     // https://www.oreilly.com/library/view/gradle-beyond-the/9781449373801/ch04.html
     // Example 4-12. Declaring dependencies on subprojects
@@ -57,6 +54,9 @@ tasks.register('uberJar', Jar) {
     from {
         configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
     }
+    manifest {
+        attributes 'Main-Class': 'expectusafterlun.ch.jspeak.JSpeak'
+    }
 }
 
 task executeScript(type:Exec) {
@@ -72,4 +72,8 @@ jar {
     manifest {
         attributes 'Main-Class': 'expectusafterlun.ch.jspeak.JSpeak'
     }
+}
+
+test {
+//    useJUnitPlatform()
 }
